# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  check_differences.py  const.py  diff.py  difference_checker.py  generator.py  parsing.py
gendiff/formatters/: __init__.py  json.py  plain.py  stringify.py  stylish.py
gendiff/methods_of_comparison/: gendiff_json.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: output.py  test_gendiff.py  test_gendiff_json.py  test_gendiff_yaml.py
tests/fixtures/: output.py
tests/fixtures/yaml/: filepath1_nest.yml  filepath2_nest.yml
tests/outputs/: output.py  output_json.py  output_yaml.py
