[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Shows differences between two files"
authors = ["sudobooo <marsdoghelena@gmail.com>"]
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3.8"
]
repository = "https://github.com/sudobooo/python-project-lvl2"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
